se habilita button de nuevo juego

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <button onclick="verificarIntento();" class="container__boton">
               Intentar
             </button>
+            <!-- disabled indica que el botón esta desactivado -->
             <button class="container__boton" id="reiniciar" disabled>
               Nuevo juego
             </button>
