--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               Intentar
             </button>
             <!-- disabled indica que el botón esta desactivado -->
-            <button class="container__boton" id="reiniciar" disabled>
+            <button onclick="reiniciarJuego()" class="container__boton" id="reiniciar" disabled>
               Nuevo juego
             </button>
           </div>
