--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@
 
   <body>
     <div class="container">
+     
       <div class="container__contenido">
+        <img
+          src="./img/piensa.gif"
+          alt="Una persona mirando a la izquierda"
+          class="container__imagen-persona"
+        />
         <div class="container__informaciones">
           <div class="container__texto">
             <h1></h1>
@@ -32,11 +38,7 @@
             </button>
           </div>
         </div>
-        <img
-          src="./img/ia.png"
-          alt="Una persona mirando a la izquierda"
-          class="container__imagen-persona"
-        />
+        
       </div>
     </div>
 
